File: components/nexus-email/src/test/virtualthread/org/sonatype/nexus/email/EmailManagerVirtualThreadTest.java