@@ -12,9 +12,6 @@
  */
 package org.sonatype.nexus.email;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -22,350 +19,365 @@ import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 
+import javax.net.ssl.SSLContext;
+
 import org.apache.commons.mail.Email;
-import org.apache.commons.mail.EmailException;
 import org.apache.commons.mail.SimpleEmail;
+
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import org.sonatype.goodies.testsupport.TestSupport;
+import org.sonatype.nexus.crypto.secrets.Secret;
+import org.sonatype.nexus.crypto.secrets.SecretsService;
+import org.sonatype.nexus.internal.email.EmailConfigurationStore;
+import org.sonatype.nexus.internal.email.EmailManagerImpl;
+import org.sonatype.nexus.ssl.TrustStore;
+
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.notNullValue;
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.hamcrest.Matchers.lessThan;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.doAnswer;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 /**
- * Tests for {@link EmailManager} implementation with Java 21 virtual threads.
+ * Tests for {@link EmailManager} implementation compatibility with Java 21 virtual threads.
  * 
- * This test class validates that the EmailManager implementation is compatible with
- * Java 21 virtual threads, focusing on high concurrency scenarios, proper resource
- * management, and absence of thread pinning issues.
+ * This test validates that the EmailManager can operate correctly under high concurrency
+ * scenarios using Java 21 virtual threads, ensuring proper resource allocation and disposal.
  */
 @ExtendWith(MockitoExtension.class)
 @Tag("VirtualThreadTestGroup")
 class EmailManagerVirtualThreadTest
+    extends TestSupport
 {
-  private static final int HIGH_CONCURRENCY_THREAD_COUNT = 1000;
-  private static final int TIMEOUT_SECONDS = 30;
-  
   @Mock
-  private EmailManager emailManager;
-  
+  private EmailConfigurationStore emailConfigurationStore;
+
   @Mock
-  private EmailConfiguration emailConfiguration;
-  
-  @Captor
-  private ArgumentCaptor<Email> emailCaptor;
-  
-  private ExecutorService virtualThreadExecutor;
-  
+  private TrustStore trustStore;
+
+  @Mock
+  private SecretsService secretsService;
+
+  private EmailManagerImpl emailManager;
+
+  private EmailConfiguration emailConfig;
+
   @BeforeEach
-  void setUp() {
-    // Create a virtual thread per task executor for testing
-    ThreadFactory virtualThreadFactory = Thread.ofVirtual().factory();
-    virtualThreadExecutor = Executors.newThreadPerTaskExecutor(virtualThreadFactory);
+  void setUp() throws Exception {
+    // Initialize the email manager
+    emailManager = new EmailManagerImpl(emailConfigurationStore, trustStore, secretsService);
     
-    // Configure email manager mock for basic operations
-    when(emailManager.getConfiguration()).thenReturn(emailConfiguration);
-    when(emailConfiguration.isEnabled()).thenReturn(true);
+    // Set up a mock email configuration
+    emailConfig = mock(EmailConfiguration.class);
+    when(emailConfig.isEnabled()).thenReturn(true);
+    when(emailConfig.getHost()).thenReturn("smtp.example.com");
+    when(emailConfig.getPort()).thenReturn(587);
+    when(emailConfig.getFromAddress()).thenReturn("sender@example.com");
+    when(emailConfig.getUsername()).thenReturn("user");
+    Secret password = mock(Secret.class);
+    when(emailConfig.getPassword()).thenReturn(password);
+    when(emailConfigurationStore.load()).thenReturn(emailConfig);
+    
+    // Set up SSL context for email operations
+    when(trustStore.getSSLContext()).thenReturn(SSLContext.getDefault());
   }
-  
+
   @AfterEach
   void tearDown() {
-    // Ensure executor is properly shut down after each test
-    if (virtualThreadExecutor != null && !virtualThreadExecutor.isShutdown()) {
-      virtualThreadExecutor.shutdownNow();
+    // Clean up resources if needed
+  }
+
+  /**
+   * Tests that the EmailManager can handle concurrent email sending operations
+   * using virtual threads without issues.
+   */
+  @Test
+  void concurrentEmailSendingWithVirtualThreads() throws Exception {
+    // Create a virtual thread factory
+    ThreadFactory virtualThreadFactory = Thread.ofVirtual().factory();
+    
+    // Create an executor service that uses virtual threads
+    ExecutorService executor = Executors.newThreadPerTaskExecutor(virtualThreadFactory);
+    
+    try {
+      // Set up test parameters
+      int emailCount = 1000; // High number of concurrent operations
+      CountDownLatch latch = new CountDownLatch(emailCount);
+      AtomicInteger successCount = new AtomicInteger(0);
+      
+      // Create a mock for the Email class that will be used to verify interactions
+      Email mockEmail = mock(Email.class);
+      
+      // Mock the email send operation to avoid actual network calls
+      doAnswer(invocation -> {
+        // Simulate some I/O work
+        Thread.sleep(5);
+        return null;
+      }).when(mockEmail).send();
+      
+      // Submit multiple concurrent email sending tasks
+      for (int i = 0; i < emailCount; i++) {
+        final int emailIndex = i;
+        executor.submit(() -> {
+          try {
+            // Use the mock email for this task
+            // In a real scenario, we would create a new email instance for each task
+            // but for testing purposes, we can reuse the mock
+            
+            // Send the email through the EmailManager
+            emailManager.send(mockEmail);
+            
+            // Increment success counter
+            successCount.incrementAndGet();
+          }
+          catch (Exception e) {
+            log.error("Failed to send email", e);
+          }
+          finally {
+            latch.countDown();
+          }
+        });
+      }
+      
+      // Wait for all tasks to complete (with timeout)
+      boolean completed = latch.await(30, TimeUnit.SECONDS);
+      
+      // Verify all emails were processed
+      assertThat("All email tasks should complete within the timeout", completed, is(true));
+      assertThat("All emails should be sent successfully", successCount.get(), is(emailCount));
+      
+      // Verify the email was sent the expected number of times
+      verify(mockEmail, times(emailCount)).send();
+    }
+    finally {
+      // Ensure executor is shut down properly
+      executor.shutdown();
+      executor.awaitTermination(5, TimeUnit.SECONDS);
+    }
+  }
+
+  /**
+   * Tests that the EmailManager correctly handles disabled email configuration
+   * when operating with virtual threads.
+   */
+  @Test
+  void disabledEmailConfigurationWithVirtualThreads() throws Exception {
+    // Set up a disabled email configuration
+    when(emailConfig.isEnabled()).thenReturn(false);
+    
+    // Create a virtual thread factory
+    ThreadFactory virtualThreadFactory = Thread.ofVirtual().factory();
+    
+    // Create an executor service that uses virtual threads
+    ExecutorService executor = Executors.newThreadPerTaskExecutor(virtualThreadFactory);
+    
+    try {
+      // Set up test parameters
+      int emailCount = 100;
+      CountDownLatch latch = new CountDownLatch(emailCount);
+      
+      // Create a mock email for verification
+      Email mockEmail = mock(Email.class);
+      
+      // Submit multiple concurrent email sending tasks
+      for (int i = 0; i < emailCount; i++) {
+        executor.submit(() -> {
+          try {
+            // Send the mock email through the EmailManager
+            emailManager.send(mockEmail);
+          }
+          finally {
+            latch.countDown();
+          }
+        });
+      }
+      
+      // Wait for all tasks to complete
+      boolean completed = latch.await(10, TimeUnit.SECONDS);
+      
+      // Verify all tasks completed and no emails were actually sent
+      assertThat("All tasks should complete within the timeout", completed, is(true));
+      verify(mockEmail, never()).send();
+    }
+    finally {
+      // Ensure executor is shut down properly
+      executor.shutdown();
+      executor.awaitTermination(5, TimeUnit.SECONDS);
+    }
+  }
+
+  /**
+   * Tests that the EmailManager can handle a very high number of concurrent operations
+   * using virtual threads, which would be impractical with platform threads.
+   */
+  @Test
+  void highConcurrencyEmailOperationsWithVirtualThreads() throws Exception {
+    // Create a virtual thread factory
+    ThreadFactory virtualThreadFactory = Thread.ofVirtual().factory();
+    
+    // Create an executor service that uses virtual threads
+    ExecutorService executor = Executors.newThreadPerTaskExecutor(virtualThreadFactory);
+    
+    try {
+      // Set up test parameters with a very high thread count
+      int emailCount = 10000; // This would be impractical with platform threads
+      CountDownLatch latch = new CountDownLatch(emailCount);
+      AtomicInteger successCount = new AtomicInteger(0);
+      
+      // Mock the email configuration retrieval to avoid contention
+      EmailConfiguration cachedConfig = emailConfig;
+      when(emailConfigurationStore.load()).thenReturn(cachedConfig);
+      
+      // Submit a large number of concurrent tasks
+      for (int i = 0; i < emailCount; i++) {
+        executor.submit(() -> {
+          try {
+            // Get the email configuration
+            EmailConfiguration config = emailManager.getConfiguration();
+            
+            // Verify the configuration is correct
+            if (config != null && config.isEnabled()) {
+              successCount.incrementAndGet();
+            }
+          }
+          finally {
+            latch.countDown();
+          }
+        });
+      }
+      
+      // Wait for all tasks to complete (with a longer timeout due to high volume)
+      boolean completed = latch.await(60, TimeUnit.SECONDS);
+      
+      // Verify all operations completed successfully
+      assertThat("All tasks should complete within the timeout", completed, is(true));
+      assertThat("All configuration retrievals should succeed", successCount.get(), is(emailCount));
+      
+      // Verify the configuration was retrieved multiple times
+      verify(emailConfigurationStore, times(emailCount)).load();
+    }
+    finally {
+      // Ensure executor is shut down properly
+      executor.shutdown();
+      executor.awaitTermination(10, TimeUnit.SECONDS);
+    }
+  }
+  
+  /**
+   * Tests that the EmailManager implementation does not cause thread pinning issues
+   * when used with virtual threads. Thread pinning occurs when a virtual thread is
+   * forced to stay on its carrier thread, which defeats the purpose of virtual threads.
+   * 
+   * This test runs operations that would typically cause thread pinning if the implementation
+   * uses synchronized blocks or methods inappropriately, and verifies that they complete
+   * in a reasonable time.
+   */
+  @Test
+  void emailManagerShouldNotCauseThreadPinning() throws Exception {
+    // Enable thread pinning detection for this test
+    // In a real environment, this would be set via JVM flag: -Djdk.tracePinnedThreads=full
+    System.setProperty("jdk.tracePinnedThreads", "full");
+    
+    try {
+      // Create a virtual thread factory
+      ThreadFactory virtualThreadFactory = Thread.ofVirtual().factory();
+      
+      // Create an executor service that uses virtual threads
+      ExecutorService executor = Executors.newThreadPerTaskExecutor(virtualThreadFactory);
+      
       try {
-        virtualThreadExecutor.awaitTermination(5, TimeUnit.SECONDS);
+        // Set up test parameters
+        int operationCount = 5000;
+        CountDownLatch latch = new CountDownLatch(operationCount);
+        AtomicInteger successCount = new AtomicInteger(0);
+        
+        // Create a mock email for testing
+        Email mockEmail = mock(Email.class);
+        doAnswer(invocation -> {
+          // Simulate some I/O work with a sleep
+          // This would reveal thread pinning issues if present
+          Thread.sleep(10);
+          return null;
+        }).when(mockEmail).send();
+        
+        // Record start time to measure overall execution time
+        long startTime = System.currentTimeMillis();
+        
+        // Submit concurrent operations that mix different EmailManager methods
+        for (int i = 0; i < operationCount; i++) {
+          final int index = i;
+          executor.submit(() -> {
+            try {
+              // Alternate between different operations to exercise various code paths
+              switch (index % 3) {
+                case 0:
+                  // Get configuration
+                  emailManager.getConfiguration();
+                  break;
+                case 1:
+                  // Send email
+                  emailManager.send(mockEmail);
+                  break;
+                case 2:
+                  // Check if email is enabled
+                  if (emailManager.getConfiguration().isEnabled()) {
+                    // Do something with the configuration
+                  }
+                  break;
+              }
+              successCount.incrementAndGet();
+            }
+            catch (Exception e) {
+              log.error("Operation failed", e);
+            }
+            finally {
+              latch.countDown();
+            }
+          });
+        }
+        
+        // Wait for all operations to complete
+        boolean completed = latch.await(30, TimeUnit.SECONDS);
+        
+        // Calculate execution time
+        long executionTime = System.currentTimeMillis() - startTime;
+        
+        // Verify all operations completed successfully and in a reasonable time
+        assertThat("All operations should complete within the timeout", completed, is(true));
+        assertThat("All operations should succeed", successCount.get(), is(operationCount));
+        
+        // Log the execution time for analysis
+        log.info("Completed {} operations in {} ms using virtual threads", operationCount, executionTime);
+        
+        // If thread pinning were occurring, the execution time would be much longer
+        // than expected because virtual threads would be blocked on carrier threads.
+        // A reasonable threshold depends on the hardware, but we can set a conservative value.
+        // For 5000 operations with 10ms sleep each, if properly parallelized with virtual threads,
+        // this should complete much faster than if they were executed sequentially (which would take 50 seconds).
+        assertThat("Execution time indicates possible thread pinning issues", 
+            executionTime, is(lessThan(15000L)));
       }
-      catch (InterruptedException e) {
-        Thread.currentThread().interrupt();
+      finally {
+        // Ensure executor is shut down properly
+        executor.shutdown();
+        executor.awaitTermination(10, TimeUnit.SECONDS);
       }
     }
-  }
-  
-  /**
-   * Tests that the EmailManager.sendAsync method can handle a high number of concurrent
-   * requests using virtual threads without issues.
-   */
-  @Test
-  void testSendAsyncWithHighConcurrency() throws Exception {
-    // Setup
-    int taskCount = HIGH_CONCURRENCY_THREAD_COUNT;
-    CountDownLatch latch = new CountDownLatch(taskCount);
-    AtomicInteger errorCount = new AtomicInteger(0);
-    List<CompletableFuture<Void>> futures = new ArrayList<>(taskCount);
-    
-    // Configure email manager to return completed futures
-    when(emailManager.sendAsync(any(Email.class))).thenReturn(CompletableFuture.completedFuture(null));
-    
-    // Execute multiple concurrent tasks using virtual threads
-    for (int i = 0; i < taskCount; i++) {
-      final int index = i;
-      CompletableFuture<Void> future = CompletableFuture.runAsync(() -> {
-        try {
-          // Create a unique email for each task
-          SimpleEmail email = new SimpleEmail();
-          email.setSubject("Test email " + index);
-          email.setMsg("This is test email " + index);
-          email.addTo("recipient" + index + "@example.com");
-          
-          // Send the email asynchronously
-          emailManager.sendAsync(email);
-        }
-        catch (Exception e) {
-          errorCount.incrementAndGet();
-        }
-        finally {
-          latch.countDown();
-        }
-      }, virtualThreadExecutor);
-      
-      futures.add(future);
+    finally {
+      // Reset the thread pinning detection property
+      System.clearProperty("jdk.tracePinnedThreads");
     }
-    
-    // Wait for all tasks to complete
-    boolean completed = latch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS);
-    
-    // Verify results
-    assertTrue(completed, "All tasks should complete within the timeout period");
-    assertEquals(0, errorCount.get(), "No errors should occur during concurrent email sending");
-    
-    // Verify that sendAsync was called the expected number of times
-    verify(emailManager, times(taskCount)).sendAsync(any(Email.class));
-  }
-  
-  /**
-   * Tests that the EmailManager.sendVerificationAsync method works correctly with virtual threads.
-   */
-  @Test
-  void testSendVerificationAsyncWithVirtualThreads() throws Exception {
-    // Setup
-    String testAddress = "test@example.com";
-    String testPassword = "password";
-    CompletableFuture<Void> completedFuture = CompletableFuture.completedFuture(null);
-    
-    // Configure mock behavior
-    when(emailManager.sendVerificationAsync(emailConfiguration, testPassword, testAddress))
-        .thenReturn(completedFuture);
-    
-    // Execute the test in a virtual thread
-    CompletableFuture<Void> future = CompletableFuture.runAsync(() -> {
-      CompletableFuture<Void> result = emailManager.sendVerificationAsync(
-          emailConfiguration, testPassword, testAddress);
-      
-      assertThat(result, is(notNullValue()));
-      assertFalse(result.isCompletedExceptionally());
-    }, virtualThreadExecutor);
-    
-    // Wait for completion and verify
-    future.join();
-    verify(emailManager).sendVerificationAsync(emailConfiguration, testPassword, testAddress);
-  }
-  
-  /**
-   * Tests that the EmailManager.constructMessageAsync method works correctly with virtual threads.
-   */
-  @Test
-  void testConstructMessageAsyncWithVirtualThreads() throws Exception {
-    // Setup
-    String testMessage = "Test message";
-    String constructedMessage = "Constructed: Test message";
-    CompletableFuture<String> completedFuture = CompletableFuture.completedFuture(constructedMessage);
-    
-    // Configure mock behavior
-    when(emailManager.constructMessageAsync(testMessage)).thenReturn(completedFuture);
-    
-    // Execute the test in a virtual thread
-    CompletableFuture<Void> future = CompletableFuture.runAsync(() -> {
-      CompletableFuture<String> result = emailManager.constructMessageAsync(testMessage);
-      
-      assertThat(result, is(notNullValue()));
-      assertFalse(result.isCompletedExceptionally());
-      assertEquals(constructedMessage, result.join());
-    }, virtualThreadExecutor);
-    
-    // Wait for completion and verify
-    future.join();
-    verify(emailManager).constructMessageAsync(testMessage);
-  }
-  
-  /**
-   * Tests that the EmailManager handles exceptions correctly when using virtual threads.
-   */
-  @Test
-  void testExceptionHandlingWithVirtualThreads() throws Exception {
-    // Setup
-    Email email = spy(new SimpleEmail());
-    EmailException testException = new EmailException("Test exception");
-    
-    // Configure mock to throw an exception
-    doThrow(testException).when(emailManager).send(email);
-    
-    // Execute the test in a virtual thread
-    CompletableFuture<Void> future = CompletableFuture.runAsync(() -> {
-      // Verify that the exception is properly thrown
-      EmailException exception = assertThrows(EmailException.class, () -> {
-        emailManager.send(email);
-      });
-      
-      assertEquals("Test exception", exception.getMessage());
-    }, virtualThreadExecutor);
-    
-    // Wait for completion and verify
-    future.join();
-    verify(emailManager).send(email);
-  }
-  
-  /**
-   * Tests that the EmailManager properly respects the enabled flag when using virtual threads.
-   */
-  @Test
-  void testEmailEnabledFlagWithVirtualThreads() throws Exception {
-    // Setup
-    Email email = spy(new SimpleEmail());
-    
-    // Configure email configuration to be disabled
-    when(emailConfiguration.isEnabled()).thenReturn(false);
-    
-    // Execute the test in a virtual thread
-    CompletableFuture<Void> future = CompletableFuture.runAsync(() -> {
-      // Verify that send is not called when email is disabled
-      assertDoesNotThrow(() -> {
-        emailManager.send(email);
-      });
-    }, virtualThreadExecutor);
-    
-    // Wait for completion and verify
-    future.join();
-    verify(emailManager).send(email);
-  }
-  
-  /**
-   * Tests that multiple concurrent operations can be performed without thread pinning issues.
-   * This test uses a high number of virtual threads to detect potential thread pinning problems.
-   */
-  @Test
-  void testNoPinningWithConcurrentOperations() throws Exception {
-    // Setup
-    int taskCount = HIGH_CONCURRENCY_THREAD_COUNT;
-    CountDownLatch latch = new CountDownLatch(taskCount);
-    AtomicInteger completedCount = new AtomicInteger(0);
-    
-    // Configure email manager for various operations
-    when(emailManager.sendAsync(any(Email.class))).thenReturn(CompletableFuture.completedFuture(null));
-    when(emailManager.constructMessageAsync(any())).thenReturn(CompletableFuture.completedFuture("test"));
-    when(emailManager.sendVerificationAsync(any(), any())).thenReturn(CompletableFuture.completedFuture(null));
-    
-    // Execute multiple concurrent tasks using virtual threads
-    for (int i = 0; i < taskCount; i++) {
-      final int index = i % 3; // Cycle through 3 different operations
-      CompletableFuture.runAsync(() -> {
-        try {
-          switch (index) {
-            case 0:
-              // Test send async
-              SimpleEmail email = new SimpleEmail();
-              emailManager.sendAsync(email);
-              break;
-            case 1:
-              // Test construct message async
-              emailManager.constructMessageAsync("test");
-              break;
-            case 2:
-              // Test send verification async
-              emailManager.sendVerificationAsync(emailConfiguration, "test@example.com");
-              break;
-          }
-          completedCount.incrementAndGet();
-        }
-        finally {
-          latch.countDown();
-        }
-      }, virtualThreadExecutor);
-    }
-    
-    // Wait for all tasks to complete
-    boolean completed = latch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS);
-    
-    // Verify results
-    assertTrue(completed, "All tasks should complete within the timeout period");
-    assertEquals(taskCount, completedCount.get(), "All operations should complete successfully");
-    
-    // Verify that the methods were called the expected number of times
-    int expectedSendAsyncCalls = taskCount / 3 + (taskCount % 3 > 0 ? 1 : 0);
-    int expectedConstructMessageCalls = taskCount / 3 + (taskCount % 3 > 1 ? 1 : 0);
-    int expectedSendVerificationCalls = taskCount / 3;
-    
-    verify(emailManager, times(expectedSendAsyncCalls)).sendAsync(any(Email.class));
-    verify(emailManager, times(expectedConstructMessageCalls)).constructMessageAsync(any());
-    verify(emailManager, times(expectedSendVerificationCalls)).sendVerificationAsync(any(), any());
-  }
-  
-  /**
-   * Tests that the EmailManager can handle a mix of synchronous and asynchronous operations
-   * when executed with virtual threads.
-   */
-  @Test
-  void testMixedSyncAndAsyncOperationsWithVirtualThreads() throws Exception {
-    // Setup
-    int taskCount = 100; // Smaller count for mixed operations test
-    CountDownLatch latch = new CountDownLatch(taskCount);
-    AtomicInteger errorCount = new AtomicInteger(0);
-    
-    // Configure email manager for various operations
-    when(emailManager.sendAsync(any(Email.class))).thenReturn(CompletableFuture.completedFuture(null));
-    when(emailManager.constructMessageAsync(any())).thenReturn(CompletableFuture.completedFuture("test"));
-    
-    // Execute multiple concurrent tasks using virtual threads
-    for (int i = 0; i < taskCount; i++) {
-      final int index = i;
-      CompletableFuture.runAsync(() -> {
-        try {
-          if (index % 2 == 0) {
-            // Synchronous operation
-            emailManager.send(new SimpleEmail());
-          }
-          else {
-            // Asynchronous operation
-            emailManager.sendAsync(new SimpleEmail());
-          }
-        }
-        catch (Exception e) {
-          errorCount.incrementAndGet();
-        }
-        finally {
-          latch.countDown();
-        }
-      }, virtualThreadExecutor);
-    }
-    
-    // Wait for all tasks to complete
-    boolean completed = latch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS);
-    
-    // Verify results
-    assertTrue(completed, "All tasks should complete within the timeout period");
-    assertEquals(0, errorCount.get(), "No errors should occur during mixed operations");
-    
-    // Verify that the methods were called the expected number of times
-    verify(emailManager, times(taskCount / 2)).send(any(Email.class));
-    verify(emailManager, times(taskCount / 2)).sendAsync(any(Email.class));
   }
 }
